--- a/package.json
+++ b/package.json
@@ -1,26 +1,59 @@
 {
-  "name": "reactTodo",
+  "name": "app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --hot --inline"
+    "clean": "rimraf dist",
+    "lint": "eslint app",
+    "test": "echo 'No tests specified.'",
+    "conf": "node ./scripts/generate-nginx-conf.js",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --hot --inline --history-api-fallback",
+    "build:dev": "rimraf dist && cross-env NODE_ENV=development webpack --config ./webpack.config.js --progress --profile --colors",
+    "build:prod": "rimraf dist && cross-env NODE_ENV=production webpack --config ./webpack.production.config.js --display-error-details",
+    "build:circleci": "cross-env NODE_ENV=production webpack --config ./webpack.production.config.js --display-error-details --bail",
+    "jscs": "jscs app",
+    "bump:patch": "npm version patch -m \"v%s\"",
+    "bump:minor": "npm version minor -m \"v%s\"",
+    "bump": "npm run bump:patch"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "assets-webpack-plugin": "^3.5.0",
+    "autoprefixer": "^6.5.3",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
+    "cross-env": "^3.1.3",
+    "css-loader": "^0.23.1",
+    "eslint": "^3.11.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "flux": "^3.1.0",
+    "html-loader": "^0.4.3",
+    "html-webpack-plugin": "^2.24.1",
+    "jscs": "^3.0.7",
+    "jsdom": "^9.8.3",
+    "json-loader": "^0.5.4",
+    "jsx-loader": "^0.13.2",
+    "nconf": "^0.8.4",
+    "node-sass": "^3.13.0",
+    "react-router": "^3.0.0",
+    "rimraf": "^2.5.4",
+    "sass-loader": "^4.0.2",
+    "stats-webpack-plugin": "^0.4.2",
+    "strip-loader": "^0.1.2",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2"
   },
   "devDependencies": {
-    "babel-core": "^6.17.0",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.16.0",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
+    "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "react-hot-loader": "^3.0.0-beta.6",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.2"
+    "file-loader": "^0.9.0",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1"
   }
 }
